[gd_scene load_steps=15 format=2]

[ext_resource path="res://Assets Mario/Sprite/SNES - Super Mario World - Welcome Screen Stage.png" type="Texture" id=1]
[ext_resource path="res://Cenas/Menu_mario_2.gd" type="Script" id=2]
[ext_resource path="res://Assets Mario/montanha.png" type="Texture" id=3]
[ext_resource path="res://Assets Mario/nuvens.png" type="Texture" id=4]
[ext_resource path="res://Cenas/MenuPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets Mario/mariotile.png" type="Texture" id=6]
[ext_resource path="res://Assets Mario/Super-Mario-World.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets Mario/sounds/menu2_1.wav" type="AudioStream" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 0, 0, 32, 0, 32, 32, 0, 32 )

[sub_resource type="TileSet" id=4]
0/name = "mariotile.png 0"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 512, 96, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "mariotile.png 1"
1/texture = ExtResource( 6 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 544, 96, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "mariotile.png 2"
2/texture = ExtResource( 6 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 576, 96, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="DynamicFont" id=5]
size = 15
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 7 )

[sub_resource type="Animation" id=6]
resource_name = "dialogo"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 396, 129 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Menu_mario_2" type="Node2D"]
script = ExtResource( 2 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="Button" type="Button" parent="ParallaxBackground"]
margin_left = 310.0
margin_top = 308.0
margin_right = 685.0
margin_bottom = 331.0

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
margin_right = 1027.0
margin_bottom = 602.0
color = Color( 0.937255, 0.764706, 0.545098, 1 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="nuvens" type="Sprite" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2( 513.5, 304.5 )
scale = Vector2( 1.99805, 1.36343 )
texture = ExtResource( 4 )

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="montanha" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 515, 281 )
scale = Vector2( 1.99805, 1.43433 )
texture = ExtResource( 3 )

[node name="Menu" type="Sprite" parent="."]
position = Vector2( -2, -143 )
scale = Vector2( 2.53125, 1.70833 )
texture = ExtResource( 1 )
centered = false

[node name="Menu2" type="Sprite" parent="."]
position = Vector2( 637, -143 )
scale = Vector2( 2.53125, 1.70833 )
texture = ExtResource( 1 )
centered = false

[node name="MenuPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 28, 488 )
scale = Vector2( 2.5, 2.5 )

[node name="TileMenu" type="TileMap" parent="."]
tile_set = SubResource( 4 )
cell_size = Vector2( 32, 32 )
format = 1

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 305.0
margin_top = 134.0
margin_right = 305.0
margin_bottom = 134.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 315.0
margin_top = 149.0
margin_right = 704.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 5 )
text = "Bem vindo!! Essa Ã© a ilha do mario
Nessa estranha ilha a gente desco
briu que a princesa esta sumida
parece que e o bowser novamente
poderia nos ajudar a recupera la?"
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dialogo = SubResource( 6 )

[node name="MusicaFundo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="ParallaxBackground/Button" to="." method="_on_Button_pressed"]
